--- a/ejemplo3/src/app/page.module.css
+++ b/ejemplo3/src/app/page.module.css
@@ -39,22 +39,48 @@
 }
 
 .calculadora {
-  max-width: 400px;  
-  margin: auto;   padding: 20px;   
-  border: 1px solid #ccc;   
+  width: 300px;
+  height: 225px;
+  padding: 20px;    
   border-radius: 5px;   
   background-color: #fff;   
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.numeros {     margin-bottom: 10px;   }    
+.numeros { margin-bottom: 10px; }    
 
-.text {   display: block;   margin-bottom: 5px;   }      
+.text { display: block;   margin-bottom: 5px; }      
 
 .inputnum {   width: 100%;   padding: 8px;   border: 1px solid #ccc;   border-radius: 5px;   }    
 
-.button {   font-size: 1.2em;   padding: 10px;   margin-right: 10px;   border: 1px solid #ccc;   border-radius: 5px;   cursor: pointer;   }   
+.button {
+  width: 30px; 
+  height: 30px; 
+  padding: 10px; 
+  margin-right: 10px;  
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer;   
+}   
 
-.resultado {   margin-top: 10px;   font-weight: bold;   }   
+.resultado {
+
+  width: 100%;
+  height: 30px;
+  color: white;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #1a1a1a;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}   
 
 .main ol {
   font-family: var(--font-geist-mono);
